# mihon_img_upscale

./: .gitignore  CHANGELOG.md  README.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  waifu2x.cpp  waifu2x.h  waifu2x_jni.cpp
app/src/main/java/eu/kanade/presentation/reader/settings/: ColorFilterPage.kt  ReadingModePage.kt
app/src/main/java/eu/kanade/tachiyomi/data/coil/: TachiyomiImageDecoder.kt  Utils.kt
app/src/main/java/eu/kanade/tachiyomi/data/updater/: AppUpdateChecker.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/: MihonShaders.kt  ReaderActivity.kt  ReaderViewModel.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/loader/: HttpPageLoader.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/model/: ReaderPage.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/setting/: ReaderPreferences.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/viewer/: ReaderPageImageView.kt  ViewerConfig.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/viewer/pager/: DiagonalWrapPageTransformer.kt  PagerConfig.kt  PagerPageHolder.kt  PagerViewer.kt  PagerViewerAdapter.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/viewer/webtoon/: WebtoonConfig.kt  WebtoonPageHolder.kt  WebtoonViewer.kt
app/src/main/java/eu/kanade/tachiyomi/util/waifu2x/: EnhancementQueue.kt  ImageEnhancementCache.kt  ImageEnhancer.kt  Waifu2x.kt
core/common/src/main/kotlin/tachiyomi/core/common/util/system/: ImageUtil.kt
i18n/src/commonMain/moko-resources/base/: strings.xml
